--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="jpeg" href="/mint1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>elderwoods2</title>
+    <meta name="p:domain_verify" content="1a335a5b96f52467c86ab534118b3596" />
   </head>
   <body>
     <div id="root"></div>
